# py_pkg_template

./: .gitignore  README.md  check_pkg.bat  mkdocs.yml  pyproject.toml  requirements-dev.txt  ruff.toml  setup.py  tox.ini
docs/: requirements.txt
gh_actions/: enable_gh_actions
gh_actions/workflows/: docs.yml  linters.yml  release.yml  ruff.yml  run_tests.yml  unittests.yml
src/pkg_name/: _version.py
